Add empty .env files

--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ front-web/.eslintcache
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
