--- a/.github/workflows/abocados-workflow.yml
+++ b/.github/workflows/abocados-workflow.yml
@@ -27,6 +27,13 @@ jobs:
         run: make build
 
       - name: Run migrations
+        env:
+          POSTGRES_HOST: db
+          POSTGRES_PORT: 5432
+          POSTGRES_DB: test-db
+          POSTGRES_USER: test-user
+          POSTGRES_PASSWORD: test-password
+          DJANGO_SECRET_KEY: django-test-key
         run: make migrate_full
 
       - name: Run tests
