--- a/.github/workflows/abocados-workflow.yml
+++ b/.github/workflows/abocados-workflow.yml
@@ -51,6 +51,7 @@ jobs:
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+          MODE: workflow
         run: |
           export DATABASE_URL=postgres://${{ secrets.POSTGRES_USER }}:${{ secrets.POSTGRES_PASSWORD }}@${{ secrets.POSTGRES_HOST }}:${{ secrets.POSTGRES_PORT }}/${{ secrets.POSTGRES_DB }}
           export DEBUG=1
@@ -58,10 +59,6 @@ jobs:
       - name: Run migrations
         run: |
           export DATABASE_URL=postgres://${{ secrets.POSTGRES_USER }}:${{ secrets.POSTGRES_PASSWORD }}@${{ secrets.POSTGRES_HOST }}:${{ secrets.POSTGRES_PORT }}/${{ secrets.POSTGRES_DB }}
-          export DEBUG=1
-          export ALLOWED_HOSTS=localhost
-          export GITHUB_WORKFLOW=True
-          export MODE=workflow
           make migrate_full
 
       - name: Run tests
