--- a/.github/workflows/abocados-workflow.yml
+++ b/.github/workflows/abocados-workflow.yml
@@ -38,8 +38,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # - name: Install dependencies
-      #   run: make build
+      - name: Install dependencies
+        run: make build
 
       - name: Setup database
         env:
