--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
-version: '3'
+version: "3"
 
+volumes:
+  node_modules:
 services:
   db:
     container_name: abocados-db
@@ -11,37 +13,33 @@ services:
     build:
       context: ./server
       dockerfile: Dockerfile
-    command: 'python manage.py runserver 0.0.0.0:3003'
+    command: "python manage.py runserver 0.0.0.0:3003"
     env_file:
       - .env
     volumes:
       - ./server:/app
     ports:
-      - '3003:3003'
+      - "3003:3003"
     depends_on:
       - db
-
   front-web:
+    container_name: abocados-web
+    restart: always
     build:
       context: ./front-web
       dockerfile: Dockerfile
-    container_name: abocados-web
-    restart: always
+    ports:
+      - "3000:3000"
     volumes:
       - ./front-web:/app
-      - /app/node_modules
+      - node_modules:/app/node_modules
     env_file:
       - .env
-    ports:
-      - '3000:3000'
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    command: 'npm run dev'
 
   nginx:
     container_name: abocados-nginx
     build: ./nginx
     ports:
-      - '80:80'
+      - "3001:3001"
     depends_on:
       - front-web
