--- a/server/Dockerfile-pro
+++ b/server/Dockerfile-pro
@@ -7,3 +7,6 @@ RUN pip install -r requirements.txt
 RUN apt-get update && apt-get install -y gettext
 COPY . /app/
 EXPOSE 3003
+
+CMD ["make", "build"]
+CMD ["make", "run"]
