Add command there

--- a/server/Dockerfile-pro
+++ b/server/Dockerfile-pro
@@ -8,5 +8,4 @@ RUN apt-get update && apt-get install -y gettext
 COPY . /app/
 EXPOSE 3003
 
-CMD ["make", "build"]
-CMD ["make", "run"]
+CMD ["manage.py", "runserver", "0.0.0.0:3003"]
