--- a/front-web/Dockerfile.dev
+++ b/front-web/Dockerfile.dev
@@ -15,8 +15,6 @@ FROM base
 
 COPY --from=build /app/node_modules /app/node_modules
 
+CMD [ "npm", "run", "dev" ]
+
 EXPOSE 3000
-
-CMD [ "npm", "run", "build" ]
-
-CMD [ "npm", "run", "start" ]
