--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: abocados-db
     image: postgres
     env_file:
-      - ./.env
+      - ./server/.env
   server:
     container_name: abocados-server
     build:
@@ -15,7 +15,7 @@ services:
       dockerfile: Dockerfile.dev
     command: "python manage.py runserver 0.0.0.0:3003"
     env_file:
-      - .env
+      - server/.env
     volumes:
       - ./server:/app
     ports:
@@ -34,12 +34,4 @@ services:
       - ./front-web:/app
       - node_modules:/app/node_modules
     env_file:
-      - .env
-
-  nginx:
-    container_name: abocados-nginx
-    build: ./nginx
-    ports:
-      - "3001:3001"
-    depends_on:
-      - front-web
+      - front-web/.env
