--- a/server/.env.example
+++ b/server/.env.example
@@ -14,6 +14,7 @@ POSTGRES_PASSWORD=
 
 # Django
 DJANGO_SECRET_KEY=
+DJANGO_DEBUG=True
 
 # Email
 EMAIL_HOST=smtp.gmail.com
@@ -23,4 +24,5 @@ EMAIL_HOST_PASSWORD=
 DEFAULT_FROM_EMAIL=
 
 # Other
-FRONT_END_URL='http://localhost:3000/'
+FRONT_END_URL='localhost:3000'
+BACK_END_URL='localhost:3003'
